ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 3.0.0-rc8
    • Affects Version/s: 3.0.0-rc7
    • Component/s: Replication
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This bug only seems to apply to non-write command mode. It does not seem to affect 2.6.7.

      replSet error : logOp() but can't accept write to collection test.$cmd
      Fatal Assertion 17405
      
      #0  0x00007fcaa230b20b in raise (sig=5) at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c:37
      #1  0x00000000018c2fd2 in mongo::breakpoint () at src/mongo/util/debugger.cpp:63
      #2  0x00000000018b808a in mongo::fassertFailed (msgid=17405) at src/mongo/util/assert_util.cpp:165
      #3  0x00000000015e8fa6 in mongo::repl::(anonymous namespace)::_logOpRS (txn=0x7fcaa270c7d0, opstr=0x1f7cd48 "c", ns=0x50b9588 "test.$cmd", logNS=0x0, obj=..., o2=0x0, bb=0x0, fromMigrate=false) at src/mongo/db/repl/oplog.cpp:238
      #4  0x00000000015e9eaa in mongo::repl::logOp (txn=0x7fcaa270c7d0, opstr=0x1f7cd48 "c", ns=0x50b9588 "test.$cmd", obj=..., patt=0x0, b=0x0, fromMigrate=false) at src/mongo/db/repl/oplog.cpp:380
      #5  0x000000000126fd6f in mongo::userCreateNS (txn=0x7fcaa270c7d0, db=0x4f88500, ns=..., options=..., logForReplication=true, createDefaultIndexes=true) at src/mongo/db/catalog/database.cpp:634
      #6  0x0000000001440e93 in mongo::receivedUpdate (txn=0x7fcaa270c7d0, m=..., op=...) at src/mongo/db/instance.cpp:647
      #7  0x000000000143f629 in mongo::assembleResponse (txn=0x7fcaa270c7d0, m=..., dbresponse=..., remote=..., fromDBDirectClient=false) at src/mongo/db/instance.cpp:463
      #8  0x000000000113f4f8 in mongo::MyMessageHandler::process (this=0x4c48138, m=..., port=0x4c6f9d0, le=0x4c6f8e0) at src/mongo/db/db.cpp:206
      #9  0x00000000018e11c6 in mongo::PortMessageServer::handleIncomingMsg (arg=0x4c6f9d0) at src/mongo/util/net/message_server_port.cpp:229
      #10 0x00007fcaa2303182 in start_thread (arg=0x7fcaa270d700) at pthread_create.c:312
      #11 0x00007fcaa140400d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
      

      Version: 94cb08d1d1a147

            Assignee:
            Eric Milkie
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: