SERVER-17129 check canAcceptWrites before implicitly creating ns for legacy upsert